<resources>
    <string name="app_name">CountLories</string>
    <string name="title_login_page">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="logo_desc">ini logo</string>
    <string name="background_desc">ini background</string>
    <string name="pass_hint">Max 8 Character</string>
    <string name="email_hint">Your Valid Email</string>
    <string name="title_register_page">Daftar</string>
    <string name="username">Username</string>
    <string name="username_hint">Your Username</string>
    <string name="register">Daftar</string>
    <string name="no_account">Belum punya akun?</string>
    <string name="title_boarding_first">Point The Camera</string>
    <string name="message_boarding_first">we hope your phone camera is not damaged! Point it at your food</string>
    <string name="skip_btn">Skip</string>
    <string name="title_boarding_second">Scan the food</string>
    <string name="message_boarding_second">Point the camera so that the entire device is on the screen and it will scan</string>
    <string name="next">Continue</string>
    <string name="title_boarding_third">See the calories</string>
    <string name="message_boarding_third">See your food calories and get ready for healthy lifestyle</string>
    <string name="start">Get Started</string>
    <string name="title_welcome">Welcome to CountLories</string>
    <string name="message_welcome">Unlock the Secrets to a Balanced Diet with CountLories, Your Personalized Calorie Counter</string>
    <string name="title_ideal_feature">Get Your Ideal Body</string>
    <string name="title_latest_tips">Latest Healthy Tips</string>
    <string name="rect_desc">ini rect item</string>
    <string name="content_tips_title">Lost Weight In 30 Days</string>
    <string name="title_favorite">Your Favorite Food</string>
    <string name="menu_title">Bubur Ayam</string>
    <string name="menu_portion">1 Porsi</string>
    <string name="menu_calories">120 Kkal</string>
    <string name="home_btn">Home</string>
    <string name="tips_btn">Tips</string>
    <string name="history_btn">History</string>
    <string name="account_btn">Account</string>
    <string name="scan_btn_desc">ini scan button</string>
    <string name="scroll_view">scroll view</string>
    <string name="tips_title">Healthy Tips</string>
    <string name="history_title">Your History</string>
    <string name="favorite_title">Your Favorite</string>
    <string name="welcome_username">Welcome, Username</string>
    <string name="greeting">Halo, %1$s</string>
    <string name="email_user">username@gmail.com</string>
    <string name="settings_btn">Settings</string>
    <string name="favorite_btn">Favorite</string>
    <string name="sign_out_btn">Sign Out</string>
    <string name="title_tips_detail">Lost Weight in 30 Days</string>
    <string name="tips_detail_content">Jetpack Compose adalah framework baru untuk mendesain layout UI yang keren dengan lebih cepat dan mudah, cukup menggunakan bahasa Kotlin saja. Melalui Jetpack Compose, Anda dapat membuat desain dengan pendekatan declarative yang lebih simpel dan kode yang lebih sedikit. Dengan begitu, Anda bisa lebih produktif dan fokus untuk mengembangkan fitur yang berguna bagi pengguna daripada menghabiskan waktu untuk membuat UI. Ini selaras dengan visi library Jetpack yang kita kenal selama ini. Jetpack Compose juga dibuat untuk mengikuti perkembangan zaman, di mana device semakin beragam, ekspektasi pengguna terhadap aplikasi semakin meningkat, serta kebutuhan UI yang lebih dinamis dan ekspresif. Untuk itulah Jetpack Compose mulai dikenalkan oleh Google sejak tahun 2020 untuk menjawab feedback dari komunitas developer [1]. Alhasil, antusiasme terhadap teknologi ini sangatlah besar. Banyak developer yang sudah mencoba walaupun statusnya masih Alpha. Tentu Anda juga penasaran, kan? Kira-kira mengapa banyak developer antusias dengan Jetpack Compose? Apa perbedaan cara baru ini dengan Android View yang lama? Apa yang menjadi kelebihan Jetpack Compose? Semuanya akan terjawab pada materi selanjutnya. Jadi, yuk kita lanjut ke materi berikutnya!</string>
    <string name="bmi_calculator">title_calculator</string>
    <string name="title_calculator">BMI Calculator</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="male_btn">Laki-Laki</string>
    <string name="female_btn">Perempuan</string>
    <string name="weight">Berat Badan</string>
    <string name="height">Tinggi Badan</string>
    <string name="kg">Kg</string>
    <string name="cm">Cm</string>
    <string name="hitung">Hitung</string>
    <string name="bmi_value">ini BMI</string>
    <string name="weight_value">ini berat</string>
    <string name="height_value">ini tinggi</string>
    <string name="gender_value">ini jenis kelamin</string>
    <string name="ideal_value">ini berat badan ideal</string>
    <string name="your_bmi">Kadar BMI anda :</string>
    <string name="status_bmi">Normal</string>
    <string name="ideal_desc">Dalam rangka menjaga kesehatan dan mencapai berat badan yang ideal, berdasarkan tinggi badan Anda yang mencapai %1$s cm, kami merekomendasikan berat badan ideal Anda sekitar %2$s kg.</string>
    <string name="bmi_underweight">Anda memiliki BMI di bawah kisaran normal. Hal ini menunjukkan bahwa berat badan Anda cenderung kurang dan Anda mungkin mengalami kekurangan nutrisi. Penting untuk memperhatikan pola makan yang sehat dan seimbang untuk mencapai berat badan yang ideal.</string>
    <string name="bmi_normal">Anda memiliki BMI dalam kisaran normal. Ini adalah tanda bahwa berat badan Anda seimbang dengan tinggi badan Anda secara keseluruhan. Tetap menjaga pola makan yang sehat dan aktifitas fisik untuk menjaga kesehatan dan keseimbangan tubuh Anda.</string>
    <string name="bmi_overweight">Anda memiliki BMI di kisaran overweight. Ini menunjukkan bahwa berat badan Anda cenderung lebih tinggi dari yang dianggap sehat. Perlu memperhatikan pola makan yang sehat, mengurangi konsumsi makanan tinggi lemak dan gula, serta meningkatkan aktivitas fisik untuk mencapai berat badan yang ideal.</string>
    <string name="bmi_obesity_1">Anda memiliki BMI di kisaran obesitas kelas 1. Ini menunjukkan bahwa berat badan Anda jauh melampaui batas yang sehat dan dapat meningkatkan risiko penyakit seperti diabetes, tekanan darah tinggi, dan penyakit jantung. Konsultasikan dengan dokter atau ahli gizi untuk mendapatkan nasihat dan rencana pengelolaan berat badan yang tepat.</string>
    <string name="bmi_obesity_2">Anda memiliki BMI di kisaran obesitas kelas 2. Ini adalah kondisi yang serius dan meningkatkan risiko berbagai masalah kesehatan. Penting untuk mencari bantuan profesional dan memulai program pengelolaan berat badan yang komprehensif.</string>
    <string name="bmi_obesity_3">Anda memiliki BMI di kisaran obesitas kelas 3 atau obesitas ekstrem. Ini adalah kondisi yang mengkhawatirkan dan meningkatkan risiko serius terhadap kesehatan. Diperlukan perhatian medis segera dan pendekatan yang komprehensif untuk mengelola berat badan dan kesehatan secara menyeluruh.</string>
    <string name="again">Hitung ulang</string>
    <string name="ini_back_btn">ini back btn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit_title">Keluar</string>
    <string name="exit_content">Apakah anda yakin ingin keluar?</string>
    <string name="exit_btn">Keluar</string>
    <string name="exit_no_btn">Tidak</string>
</resources>