<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="83dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp"
    android:layout_marginVertical="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fav_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineVertical_2"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/content_fav"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                tools:src="@drawable/item_left_rect"
                app:layout_constraintEnd_toStartOf="@id/guidelineVertical_2"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/rect_desc"/>

            <TextView
                android:id="@+id/fav_title"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/menu_title"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guidelineVertical_2"/>

            <TextView
                android:id="@+id/fav_portion"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/menu_portion"
                android:textColor="@color/black"
                android:layout_marginEnd="12dp"
                app:layout_constraintTop_toBottomOf="@id/fav_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guidelineVertical_2"/>

            <TextView
                android:id="@+id/fav_calories"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/menu_calories"
                android:textColor="@color/black"
                android:layout_marginEnd="12dp"
                app:layout_constraintTop_toBottomOf="@id/fav_portion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guidelineVertical_2"/>

            <ImageView
                android:id="@+id/fav_img"
                android:layout_width="215dp"
                android:layout_height="match_parent"
                android:scaleType="matrix"
                android:src="@drawable/title1"
                app:layout_constraintStart_toEndOf="@id/guidelineVertical_2"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>